# pet-breathy-lib

./: .clang-format  CMakeLists.txt  format.sh
apps/demo/: CMakeLists.txt  main.cpp  pet_breathy_runner.cpp  pet_breathy_runner.hpp
libs/pet-breathy/: CMakeLists.txt
libs/pet-breathy/include/pet_breathy/: optical_flow.hpp  patch_analyzer.hpp  peak_finding.hpp  pet_breathy.hpp  point.hpp  point_budget_calculator.hpp  point_generator.hpp  point_group.hpp  point_group_manager.hpp  point_group_status.hpp  point_monitor.hpp  signal_analyzer.hpp  stats.hpp  video_display.hpp  video_info.hpp  video_reader.hpp
libs/pet-breathy/src/: optical_flow.cpp  patch_analyzer.cpp  peak_finding.cpp  pet_breathy.cpp  point.cpp  point_budget_calculator.cpp  point_generator.cpp  point_group.cpp  point_group_manager.cpp  point_monitor.cpp  signal_analyzer.cpp  stats.cpp  video_display.cpp  video_reader.cpp
libs/pet-breathy/test/: get_peak_finding_test_vectors.py  test_peak_finding.cpp  test_pet_breathy.cpp
